commit translated contents

--- a/Teams/instructor-led-training-teams-landing-page.yml
+++ b/Teams/instructor-led-training-teams-landing-page.yml
@@ -4,7 +4,7 @@ summary: 'Размещенные на серверах Майкрософт бе
 brand: teams
 metadata:
   title: Обучение пользователей Microsoft Teams
-  description: 'Корпорация Майкрософт рады предоставить бесплатные виртуальные учебные курсы в режиме Teams. Если вы являетесь лицом, принимающим решения в бизнесе, администратором, ИТ-специалистом или конечным пользователем, вы найдете занятия, которые вам подойдут. Присоединяйтесь к нам, чтобы Microsoft Teams в действии, получать ответы на вопросы и взаимодействовать с нашими инструкторами в прямом эфире. Щелкните сеанс ниже, чтобы зарегистрироваться и обязательно ознакомьтесь с дополнительными курсами ниже.'
+  description: 'Корпорация Майкрософт рады предоставить бесплатные виртуальные учебные курсы в режиме жизни, разработанные для вас Teams. Если вы являетесь лицом, принимающим решения в бизнесе, администратором, ИТ-специалистом или конечным пользователем, вы найдете занятия, которые вам подойдут. Присоединяйтесь к нам, чтобы Microsoft Teams в действии, получать ответы на вопросы и взаимодействовать с нашими инструкторами в прямом эфире. Щелкните сеанс ниже, чтобы зарегистрироваться и обязательно ознакомьтесь с дополнительными курсами ниже.'
   ms.topic: hub-page
   author: SerdarSoysal
   ms.author: serdars
@@ -62,9 +62,9 @@ additionalContent:
   sections:
     - title: Курсы
       items:
-        - title: Сертификация специалиста по командной работе
-          summary: 'Совместная работа — это важный навык для сегодняшней рабочей группы. Узнайте, как надежные функции в Microsoft Teams позволяют оставаться на связи и эффективнее работать с командой'
+        - title: Путь к специалисту по Обучение командной работы
+          summary: 'Совместная работа — это важный навык для сегодняшней рабочей группы. Узнайте, как надежные Microsoft Teams позволяют оставаться на связи и эффективнее работать со своей командой.'
           url: /learn/paths/teamwork-specialist
-        - title: Сертификация специалиста по внедрению служб
-          summary: 'Возможности курса сертификации "Специалист по внедрению служб Майкрософт" Teams. Узнайте, как управлять внедрением службы Майкрософт в организации'
+        - title: Путь к службе Обучение по внедрению служб
+          summary: 'Специалисты по внедрению служб Майкрософт Обучение Path Teams и другими Microsoft 365 службами. Узнайте, как управлять внедрением службы Майкрософт в организации.'
           url: /learn/paths/m365-service-adoption
