--- a/Teams/business-voice/index.yml
+++ b/Teams/business-voice/index.yml
@@ -14,7 +14,7 @@ productDirectory:
       imageSrc: 'https://docs.microsoft.com/office/media/icons/blocks-blue.svg'
       links:
         - url: whats-business-voice.md
-          text: Teams Телефон с помощью руководства по плану звонков для малого и среднего бизнеса
+          text: Teams Телефон с рекомендациями по плану звонков для малого и среднего бизнеса
         - url: 'https://www.microsoft.com/microsoft-365/business-voice'
           text: Microsoft 365 Teams Телефон с пакетом плана звонков
         - url: /office365/servicedescriptions/teams-service-description
@@ -71,8 +71,8 @@ productDirectory:
       links:
         - url: ../cloud-voice-landing-page.md
           text: Документы для администраторов Microsoft Teams
-        - url: 'https://microsoftteams.uservoice.com/'
-          text: Отзывы на сайте UserVoice для Microsoft Teams
+        - url: 'https://feedbackportal.microsoft.com/feedback/forum/ad198462-1c1c-ec11-b6e7-0022481f8472'
+          text: Microsoft Teams обратной связи
         - url: 'https://support.office.com/teams'
           text: Документы по клиентам Microsoft Teams
         - url: /office365/admin/
