--- a/Teams/business-voice/index.yml
+++ b/Teams/business-voice/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:Hub
-title: Microsoft 365 Teams Телефон с пакетной документацией по плану звонков
-summary: 'Узнайте, как спланировать, настроить и использовать Microsoft 365 Teams Телефон с пакетом плана звонков в организации. Пакет Teams Телефон с планом звонков упрощает для небольших и средних организаций мощные и гибкие телефонные системы без затрат и сложности решений.'
+title: Microsoft 365 Teams телефонная система с документацией по плану звонков
+summary: 'Узнайте, как планировать, настроить и использовать Microsoft Teams телефонная система с планом звонков в организации. Teams телефонная система с помощью плана звонков небольшие и средние организации могут легко настроить мощные и гибкие телефонные системы без затрат и сложности решений.'
 metadata:
-  title: Microsoft 365 Teams Телефон с пакетной документацией по плану звонков
-  description: 'Узнайте, как планировать, развертывать и использовать Microsoft 365 Teams Телефон с пакетом плана звонков.'
+  title: Microsoft Teams телефонная система с документацией по плану звонков
+  description: 'Узнайте, как планировать, развертывать и использовать Microsoft Teams телефонная система с планом звонков.'
   ms.topic: hub-page
   author: dstrome
   ms.author: dstrome
@@ -14,22 +14,22 @@ productDirectory:
       imageSrc: 'https://docs.microsoft.com/office/media/icons/blocks-blue.svg'
       links:
         - url: whats-business-voice.md
-          text: Teams Телефон с рекомендациями по плану звонков для малого и среднего бизнеса
-        - url: 'https://www.microsoft.com/microsoft-365/business-voice'
-          text: Microsoft 365 Teams Телефон с пакетом плана звонков
+          text: Teams телефонная система с помощью руководства по плану звонков для малого и среднего бизнеса
+        - url: 'https://www.microsoft.com/microsoft-teams/microsoft-teams-phone'
+          text: Microsoft Teams Телефон
         - url: /office365/servicedescriptions/teams-service-description
           text: Teams описание службы
     - title: Настройка
       imageSrc: 'https://docs.microsoft.com/office/media/icons/deploy-blue.svg'
       links:
-        - url: ./whats-business-voice.md#what-do-i-need-to-buy-to-get-voice-capabilities-for-my-small-or-medium-business
-          text: Как получить пакет Teams Телефон с помощью плана звонков
+        - url: ./whats-business-voice.md#purchase-teams-phone-with-calling-plan-bundle-licenses
+          text: Как получить Teams телефонная система с помощью плана звонков
         - url: get-ready-internet.md
           text: Проверка подключения к Интернету
         - url: prepare-users.md
           text: Подготовка пользователей
         - url: set-up-overview.md
-          text: Настройка Teams Телефон с помощью плана звонков
+          text: Настройка Teams телефонная система с помощью плана звонков
     - title: Настройка установки
       imageSrc: 'https://docs.microsoft.com/office/media/icons/migration-blue.svg'
       links:
@@ -58,7 +58,7 @@ productDirectory:
         - url: /partner-center/
           text: Получение Microsoft 365 бизнес в Центре партнеров
         - url: 'https://cloudpartners.transform.microsoft.com/products/m365-business-voice-partner-playbook'
-          text: Microsoft 365 Teams Телефон с пакетом звонков в playbook партнера
+          text: Microsoft 365 Teams телефонная система с книгой партнера по плану звонков
     - title: Нужна помощь?
       imageSrc: 'https://docs.microsoft.com/office/media/icons/users-people.svg'
       links:
