--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1413,6 +1413,8 @@ items:
                 href: devices/use-teams-panels.md
               - name: Поддержка приложений на панелях Teams
                 href: app-support-on-Teams-panels.md
+              - name: Регистрация и освобождение комнаты
+                href: devices/check-in-and-room-release.md
           - name: Обновление телефонов Teams до дисплеев Teams
             href: devices/upgrade-phones-to-displays.md
           - name: Развертывание телефонов Teams и дисплеев Teams с помощью Intune
