--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1127,6 +1127,8 @@ items:
                 href: manage-phone-numbers-for-your-organization/phone-number-management-for-slovakia.md
               - name: Управление номерами телефонов в Словении
                 href: manage-phone-numbers-for-your-organization/phone-number-management-for-slovenia.md
+              - name: Управление номерами телефонов в ЮАР
+                href: manage-phone-numbers-for-your-organization/phone-number-management-for-south-africa.md
               - name: Управление номерами телефонов в Испании
                 href: manage-phone-numbers-for-your-organization/phone-number-management-for-spain.md
               - name: Управление номерами телефонов в Нидерландах
@@ -1373,8 +1375,8 @@ items:
             href: rooms/obtaining-assigning-license.md
           - name: Регистрация в управляемой службе MTRP
             href: rooms/enrolling-mtrp-managed-service.md
-          - name: Установка
-            href: rooms/monitor-software-installation-guide.md
+          - name: Регистрация устройства в управляемой службе
+            href: rooms/enroll-a-device.md
           - name: Управление доступом на основе ролей
             href: rooms/microsoft-teams-rooms-premium-rbac.md
           - name: Мониторинг Комнат и их обслуживание
